--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,14 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv2.4.10">
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/opencv">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/opencv/build/java/x64"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/opencv/build/java/x86"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/rxtx2.2"/>
+	<classpathentry kind="lib" path="C:/Users/evan/workspace/javacv-bin/javacv.jar"/>
+	<classpathentry kind="lib" path="C:/Users/evan/workspace/mfz-rxtx-2.2-20081207-win-x86/RXTXcomm.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/cleye"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
